--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "apollo-server-express": "^2.15.0",
-    "if-env": "^1.0.4"
+    "apollo-server-express": "^2.15.0"
   }
 }
